k8s/site.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-www
  namespace: default
spec:
  redirectRegex:
    regex: "^https://www\\.denisantonov\\.com/(.*)"
    replacement: "https://denisantonov.com/${1}"
    permanent: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: denisantonov-site
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: denisantonov-site
  template:
    metadata:
      labels:
        app: denisantonov-site
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: site
          image: ghcr.io/antonov-denis/denisantonovcom:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: denisantonov-site
  namespace: default
spec:
  selector:
    app: denisantonov-site
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: denisantonov-site
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-www@kubernetescrd
spec:
  tls:
    - hosts:
        - denisantonov.com
        - www.denisantonov.com
  rules:
    - host: denisantonov.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: denisantonov-site
                port:
                  number: 80
    - host: www.denisantonov.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: denisantonov-site
                port:
                  number: 80
